# task3

./: CMakeLists.txt  CString.cpp  CString.h  CString0.cpp  CString0.h  CString1.cpp  CString1.h  Factory.h  Tests.cpp  headers.h  main.cpp  test3.txt
